Start implementation of authentication mechanism
Just add template, controller and a route for sign up page.

* Changes to be committed:
.	modified:   App/Config.php
+	new file:   App/Controllers/Auth/SignUp.php
+	new file:   App/Views/Auth/sign-up.twig
.	modified:   App/Views/base.twig
.	modified:   public/index.php

--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -8,6 +8,7 @@
     <nav>
         <a href="/">Home</a> |
         <a href="/posts/index">Posts</a>
+        <a href="/signup/create>"> Sign up</a>
     </nav>
 
     {% block body %}
