--- a/App/Views/Auth/sign-up.twig
+++ b/App/Views/Auth/sign-up.twig
@@ -6,15 +6,24 @@
 
     <h1>Sign Up</h1>
 
+    {% if user.errors is not empty %}
+        <p>Errors:</p>
+        <ul>
+            {% for error in user.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
     <form action="/auth/sign-up/store" method="post">
         <div>
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Name" autofocus>
+            <input type="text" name="name" id="name" placeholder="Name" autofocus value="{{ user.name }}">
         </div>
 
         <div>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="email" name="email" id="email" placeholder="Email" value="{{ user.email }}">
         </div>
 
         <div>
