--- a/App/Views/Auth/sign-up.twig
+++ b/App/Views/Auth/sign-up.twig
@@ -2,6 +2,52 @@
 
 {%  block title %}Sign Up{% endblock %}
 
+{% block footer %}
+    <script>
+        $.validator.addMethod('validPassword',
+            function (value, element, param) {
+                if(value !== '') {
+                    if(value.match(/.*[a-z]+.*/i) == null) {
+                        return false; // At least one letter
+                    }
+                    if(value.match(/.*\d+.*/) == null) {
+                        return false; // At least one number
+                    }
+                }
+
+                return true;
+            },
+            'Must contain at least one letter and one number'
+        );
+
+        $(document).ready(function () {
+             $('#formSignup').validate({
+                 rules: {
+                     name: 'required',
+                     email: {
+                         required: true,
+                         email: true,
+                         remote: '/Auth/sign-up/validate-email'
+                     },
+                     password: {
+                         required: true,
+                         minlength: 6,
+                         validPassword: true
+                     },
+                     passwordConfirmation: {
+                         equalTo: '#password'
+                     }
+                 },
+                 messages: {
+                     email: {
+                         remote: 'Email already taken'
+                     }
+                 }
+             });
+        });
+    </script>
+{% endblock %}
+
 {% block body %}
 
     <h1>Sign Up</h1>
@@ -15,7 +61,7 @@
         </ul>
     {% endif %}
 
-    <form action="/auth/sign-up/store" method="post">
+    <form id="formSignup" action="/auth/sign-up/store" method="post">
         <div>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" placeholder="Name" autofocus value="{{ user.name }}">
@@ -28,7 +74,8 @@
 
         <div>
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="Password">
+            <input id="password" name="password" placeholder="Password" type="password"
+            />
         </div>
 
         <div>
