--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -13,5 +13,11 @@
 
     {% block body %}
     {% endblock %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+
+    {% block footer %}
+    {% endblock %}
 </body>
 </html>
