Implement login and logout functionality
Add session to twigs globals,
Add login and logout routes.
In home page, if user is logged in show logout button,
if is not logged in, show sign up and login buttons

* Changes to be committed:
+	new file:   App/Controllers/Auth/Login.php
.	modified:   App/Controllers/Auth/Register.php
.	modified:   App/Controllers/Posts.php
.	modified:   App/Models/User.php
+	new file:   App/Views/Auth/login.twig
.	modified:   App/Views/Auth/register.twig
.	modified:   App/Views/Home/index.twig
.	modified:   App/Views/Posts/index.twig
.	modified:   App/Views/base.twig
.	modified:   Core/Controller.php
.	modified:   Core/View.php
.	modified:   public/index.php

--- a/App/Views/Auth/register.twig
+++ b/App/Views/Auth/register.twig
@@ -27,7 +27,7 @@
                      email: {
                          required: true,
                          email: true,
-                         remote: '/Auth/register/validate-email'
+                         remote: '/validate-email'
                      },
                      password: {
                          required: true,
@@ -61,7 +61,7 @@
         </ul>
     {% endif %}
 
-    <form id="formSignup" action="/auth/register/store" method="post">
+    <form id="formSignup" action="/register/store" method="post">
         <div>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" placeholder="Name" autofocus value="{{ user.name }}">
