--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -7,8 +7,9 @@
 <body>
     <nav>
         <a href="/">Home</a> |
-        <a href="/posts/index">Posts</a>
-        <a href="/signup/create>"> Sign up</a>
+        <a href="/posts">Posts</a>
+        <a href="/register/create"> Sign up</a>
+        <a href="/login">Login</a>
     </nav>
 
     {% block body %}
