--- a/App/Views/Home/index.twig
+++ b/App/Views/Home/index.twig
@@ -6,14 +6,7 @@
 
     <h1>Welcome</h1>
 
-    {#<?php if(isset($_SESSION['user_id']): ?>#}
-        {#User with id <?php echo $_SESSION['user_id']; ?> is logged in#}
-    {#<?php else: ?>#}
-        {#<a href="login">Sign in</a> or <a href="/register/create">Sign up</a>#}
-    {#<?php endif; ?>#}
-
-{% if session.user_id %}
-    User with id <?php echo $_SESSION['user_id']; ?> is logged in
+{% if is_logged_in %}
     <a href="logout">Sign out</a>
 {% else %}
     <a href="login">Sign in</a> or <a href="/register/create">Sign up</a>
