Refactor: get current user by id, change isLoggedIn method with current_user
* Changes to be committed:
.	modified:   App/Auth.php
.	modified:   App/Controllers/Home.php
.	modified:   App/Models/User.php
.	modified:   App/Views/Home/index.twig
.	modified:   Core/Controller.php
.	modified:   Core/View.php

--- a/App/Views/Home/index.twig
+++ b/App/Views/Home/index.twig
@@ -6,7 +6,8 @@
 
     <h1>Welcome</h1>
 
-{% if is_logged_in %}
+{% if current_user %}
+    Hello {{ current_user.name }}
     <a href="logout">Sign out</a>
 {% else %}
     <a href="login">Sign in</a> or <a href="/register/create">Sign up</a>
