Implement Flash notification system.
* Changes to be committed:
.	modified:   App/Controllers/Auth/Login.php
+	new file:   App/Flash.php
.	modified:   App/Views/base.twig
.	modified:   Core/Controller.php
.	modified:   Core/View.php
+	new file:   public/css/style.css
.	modified:   public/index.php

--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
@@ -11,6 +12,12 @@
         <a href="/register/create"> Sign up</a>
         <a href="/login">Login</a>
     </nav>
+
+    {% for message in flash_messages %}
+        <div class="alert alert-{{ message.type }}">
+            {{ message.body }}
+        </div>
+    {% endfor %}
 
     {% block body %}
     {% endblock %}
