Add remember_me button to login form, remember its state if login fails
* Changes to be committed:
.	modified:   App/Controllers/Auth/Login.php
.	modified:   App/Views/Auth/login.twig

--- a/App/Views/Auth/login.twig
+++ b/App/Views/Auth/login.twig
@@ -19,6 +19,17 @@
             />
         </div>
 
+        <div>
+            <label>
+                <input
+                        type="checkbox"
+                        name="remember_me"
+                        id=""
+                        {% if remember_me %} checked="checked"{% endif %}
+                >Remember me
+            </label>
+        </div>
+
         <input type="submit" name="" id="" value="Submit">
     </form>
 
