Implement password reset mechanism, send email part.
Change twig render method in Core/View, so we can also get the template, not only echo it
We need this to render email templates.
Make email templates
Make Password controller to render forgot password page and request password page
Use User class and Token class to create secure hashed tokens to store them in users filed in user table
etc...

* On branch password-reset/php-mailer
* Changes to be committed:
+	new file:   App/Controllers/Password.php
.	modified:   App/Models/User.php
.	modified:   App/Views/Auth/login.twig
+	new file:   App/Views/Password/forgot.twig
+	new file:   App/Views/Password/reset_email.html.twig
+	new file:   App/Views/Password/reset_email.text.twig
+	new file:   App/Views/Password/reset_requested.twig
.	modified:   Core/View.php
.	modified:   public/index.php

--- a/App/Views/Auth/login.twig
+++ b/App/Views/Auth/login.twig
@@ -31,6 +31,7 @@
         </div>
 
         <input type="submit" name="" id="" value="Submit">
+        <a href="/password/forgot">Forgot password</a>
     </form>
 
 {% endblock %}
