Implement Users Profile functionality (show, edit, update)
* Changes to be committed:
.	modified:   App/Controllers/Auth/Register.php
+	new file:   App/Controllers/Authenticated.php
.	modified:   App/Controllers/Home.php
+	new file:   App/Controllers/Profile.php
.	modified:   App/Models/User.php
.	modified:   App/Views/Home/index.twig
+	new file:   App/Views/Profile/edit.twig
+	new file:   App/Views/Profile/show.twig
.	modified:   App/Views/base.twig
+	modified:   public/index.php

--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -7,10 +7,15 @@
 </head>
 <body>
     <nav>
-        <a href="/">Home</a> |
-        <a href="/posts">Posts</a>
-        <a href="/register/create"> Sign up</a>
-        <a href="/login">Login</a>
+        <ul>
+            <li><a href="/">Home</a></li>
+            {% if current_user %}
+                <li><a href="/profile/show">Profile</a></li>
+                <li><a href="/logout">Sign out</a></li>
+            {#{% else %}#}
+                {#<a href="login">Sign in</a> or <a href="/register/create">Sign up</a>#}
+            {% endif %}
+        </ul>
     </nav>
 
     {% for message in flash_messages %}
