--- a/App/Views/Auth/login.twig
+++ b/App/Views/Auth/login.twig
@@ -8,29 +8,28 @@
 
     <form id="formSignup" action="/login/attempt" method="post">
 
-        <div>
+        <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Email" value="{{ email }}">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Email" value="{{ email }}">
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="password">Password</label>
-            <input id="password" name="password" placeholder="Password" type="password"
+            <input id="password" class="form-control" name="password" placeholder="Password" type="password"
             />
         </div>
 
-        <div>
+        <div class="checkbox">
             <label>
                 <input
                         type="checkbox"
                         name="remember_me"
-                        id=""
                         {% if remember_me %} checked="checked"{% endif %}
                 >Remember me
             </label>
         </div>
 
-        <input type="submit" name="" id="" value="Submit">
+        <input class="btn btn-default" type="submit" name="" id="" value="Submit">
         <a href="/password/forgot">Forgot password</a>
     </form>
 
