--- a/App/Views/Auth/register.twig
+++ b/App/Views/Auth/register.twig
@@ -62,28 +62,27 @@
     {% endif %}
 
     <form id="formSignup" action="/register/store" method="post">
-        <div>
+        <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Name" autofocus value="{{ user.name }}">
+            <input type="text" class="form-control" name="name" id="name" placeholder="Name" autofocus value="{{ user.name }}">
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Email" value="{{ user.email }}">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Email" value="{{ user.email }}">
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="password">Password</label>
-            <input id="password" name="password" placeholder="Password" type="password"
-            />
+            <input id="password" class="form-control" name="password" placeholder="Password" type="password"/>
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="passwordConfirmation">Password</label>
-            <input type="password" name="passwordConfirmation" id="passwordConfirmation" placeholder="Password">
+            <input type="password" class="form-control" name="passwordConfirmation" id="passwordConfirmation" placeholder="Password">
         </div>
 
-        <input type="submit" name="" id="" value="Submit">
+        <input class="btn btn-default" type="submit" name="" id="" value="Submit">
     </form>
 
 {% endblock %}
