--- a/App/Views/Password/forgot.twig
+++ b/App/Views/Password/forgot.twig
@@ -8,12 +8,12 @@
 
     <form action="/password/request-reset" method="post">
 
-        <div>
+        <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" name="email" id="email" placeholder="Email" required autofocus>
+            <input type="email" class="form-control" name="email" id="email" placeholder="Email" required autofocus>
         </div>
 
-        <button type="submit">Send password reset email</button>
+        <button class="btn btn-default" type="submit">Send password reset email</button>
 
     </form>
 
