--- a/App/Views/Password/reset.twig
+++ b/App/Views/Password/reset.twig
@@ -53,18 +53,18 @@
     <form id="form" method="post" action="/password/reset-password">
         <input type="hidden" name="token" id="" value="{{ token }}">
 
-        <div>
+        <div class="form-group">
             <label for="password">Password</label>
-            <input id="password" name="password" placeholder="Password" type="password"
+            <input id="password" class="form-control" name="password" placeholder="Password" type="password"
             />
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="passwordConfirmation">Password</label>
-            <input type="password" name="passwordConfirmation" id="passwordConfirmation" placeholder="Password">
+            <input type="password" class="form-control" name="passwordConfirmation" id="passwordConfirmation" placeholder="Password">
         </div>
 
-        <input type="submit" name="" id="" value="Reset Password">
+        <input class="btn btn-default" type="submit" name="" id="" value="Reset Password">
     </form>
 
 {% endblock %}
