--- a/App/Views/Profile/edit.twig
+++ b/App/Views/Profile/edit.twig
@@ -73,31 +73,29 @@
     {% endif %}
 
     <form id="form" action="/profile/update" method="post">
-        <div>
+        <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Name" value="{{ user.name }}">
+            <input type="text" class="form-control" name="name" id="name" placeholder="Name" value="{{ user.name }}">
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Email" value="{{ user.email }}">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Email" value="{{ user.email }}">
         </div>
 
-        <div>
+        <div class="form-group">
             <label for="password">Password</label>
-            <input id="password" name="password" placeholder="Password" type="password"
+            <input id="password" class="form-control" name="password" placeholder="Password" type="password"
             />
         </div>
 
-        <div>
-            <label for="passwordConfirmation">Password</label>
-            <input type="password" aria-describedby="helpBlock" name="passwordConfirmation" id="passwordConfirmation" placeholder="Password">
-            <span id="helpBlcok">Leave passwords blank if you don't want to change it</span>
+        <div class="form-group">
+            <label for="passwordConfirmation">Password Confirm</label>
+            <input type="password" class="form-control" aria-describedby="helpBlock"  name="passwordConfirmation" id="passwordConfirmation" placeholder="Password Confirm">
+            <span id="helpBlock" class="help-block">Leave passwords blank if you don't want to change it</span>
         </div>
 
-
-        <br>
-        <input type="submit" name="" id="" value="Update">
+        <input class="btn btn-default" type="submit" name="" id="" value="Update">
         <a href="/profile/show">Cancel</a>
     </form>
 
