--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,5 @@
-.alert {
-    border: 1px solid #ccc;
-    padding: 6px;
+body {
+    margin-top: 3em;
 }
 
-.alert-info {
-     background-color: #d9edf7;
-}
-
-.alert-success {
-    background-color: #dff0d8;
-}
-
-.alert-warning {
-    background-color: #fcf8e3;
-}
 
